fix(components/Modal): handle horizontal scrolling in dialog window

--- a/packages/components/src/components/Dialog/Dialog.module.css
+++ b/packages/components/src/components/Dialog/Dialog.module.css
@@ -3,6 +3,7 @@
   flex-grow: 1;
   outline: none;
   display: flex;
+  overflow: hidden;
   position: relative;
   min-block-size: 48px;
   pointer-events: auto;
